# mouse3

./: CMakeLists.txt  README.md
resources/: readme.txt
resources/data/: intro.spo  mouse3.anm  mouse3.art  mouse3.fon  mouse3.mon  mouse3.pck  mouse3.spo
resources/stage1/: level1.lev  level2.lev  level3.lev  level4.lev  mouse3.lev
resources/stage2/: level1.lev  level2.lev  level3.lev  level4.lev  mouse3.lev
resources/stage3/: level1.lev  level2.lev  level3.lev  level4.lev  mouse3.lev
resources/stage4/: level1.lev  level2.lev  level3.lev  level4.lev  mouse3.lev
source/: declare.h  draw.cpp  end.cpp  font.cpp  hlavni.cpp  kontrola.cpp  load.cpp  menu.cpp  misc.cpp  monsters.cpp  mouse3.cpp  mouse3.h  mouse3.rc  move.cpp  setup.cpp  shots.cpp  sound.cpp
source/core/: co_core.h  co_font.cpp  co_fps.cpp  co_input.cpp  co_main.cpp  co_vid.cpp
source/mylib/: myfile.cpp  mylib.h  mytools.cpp
utility/: export.c
